# wshawk

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_3.0.0.md  RELEASE_SUMMARY.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  wshawk-bridge.spec  wshawk.py  wshawk_interactive.py
.github/ISSUE_TEMPLATE/: -question-or-discussion.md  bug_report.md  feature_request.md  pull_request.md
.github/workflows/: build.yml  docker-build.yml  ghcr-publish.yml
desktop/: index.js  package-lock.json  package.json  preload.js
desktop/src/: index.html  renderer.js  style.css
desktop/src/modules/: web_pentest.js  workbench.js
docs/: DEFENSIVE_VALIDATION.md  DESKTOP_V3_GUIDE.md  DOCKER.md  V3.0.3_RELEASE_GUIDE.md  V3_COMPLETE_GUIDE.md  getting_started.md
examples/: basic_scan.py  defensive_check.py  mutation_demo.py
extension/: background.js  popup.html  popup.js
payloads/: xss.txt
plugins/: README.md
tests/: __init__.py  test_binary_handler.py  test_cvss_calculator.py  test_integrations.py  test_message_intelligence.py  test_payload_mutator.py  test_report_exporter.py  test_server_fingerprint.py  test_vulnerability_verifier.py  test_waf_detector.py  test_web_pentest_platform.py
wshawk/: __init__.py  __main__.py  advanced_cli.py  ai_engine.py  ai_exploit_engine.py  binary_handler.py  config.py  db_manager.py  defensive_cli.py  defensive_validation.py  dom_invader.py  enhanced_reporter.py  gui_bridge.py  headless_xss_verifier.py  interactive.py  logger.py  message_intelligence.py  oast_provider.py  payload_mutator.py  plugin_system.py  report_exporter.py  resilience.py  scanner_v2.py  session_hijacking_tester.py  ssrf_test.py  state_machine.py  team_engine.py  vulnerability_verifier.py  ws_discovery.py
wshawk/daemon/: web_routes.py
wshawk/integrations/: __init__.py  defectdojo.py  jira_connector.py  webhook.py
wshawk/payloads/: command_injection.txt
wshawk/smart_payloads/: __init__.py  context_generator.py  feedback_loop.py  payload_evolver.py
wshawk/waf/: detector.py
wshawk/web/: __init__.py  app.py
wshawk/web/static/: style.css
wshawk/web/templates/: dashboard.html  login.html  report.html  scan.html
wshawk/web_pentest/: __init__.py  attack_chainer.py  cors_tester.py  crawler.py  csrf_forge.py  dir_scanner.py  dns_lookup.py  fuzzer.py  header_analyzer.py  http_proxy.py  port_scanner.py  proto_polluter.py  proxy_ca.py  redirect_scanner.py  report_gen.py  sensitive_finder.py  ssl_analyzer.py  ssrf_prober.py  subdomain_finder.py  tech_fingerprint.py  vuln_scanner.py  waf_detector.py
