[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wshawk"
version = "1.0.6"
authors = [
    {name = "Regaan"}
]
description = "Advanced WebSocket security scanner with 22,000+ attack payloads"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["websocket", "security", "scanner", "penetration-testing", "bug-bounty", "vulnerability"]
dependencies = [
    "websockets",
]

[project.urls]
Homepage = "https://github.com/noobforanonymous/wshawk"
"Bug Reports" = "https://github.com/noobforanonymous/wshawk/issues"
Source = "https://github.com/noobforanonymous/wshawk"

[project.scripts]
wshawk = "wshawk.__main__:cli"
wshawk-interactive = "wshawk.interactive:cli"

[tool.setuptools]
packages = ["wshawk"]
include-package-data = true

[tool.setuptools.package-data]
"wshawk" = ["payloads/*.txt"]
